# torque_y_equilibrio

./: README.md  main.ipynb  pyproject.toml
equilibrium_app/: README.md  asdp.py  counter.py  main.py  requirements.txt  settings.py
